edit 035-installment-plan-by-sber page

--- a/public/033-instalments-in-sber.html
+++ b/public/033-instalments-in-sber.html
@@ -710,7 +710,12 @@
 			</header>
 			<!-- end header-->
 			<!-- start sInstalments-->
-			<section class="sInstalments section" id="sInstalments"><img class="picture-bg" src="img/@2x/sCertificates-head-1.jpg" alt="" loading="lazy"/>
+			<section class="sInstalments section" id="sInstalments">
+				<!-- picture-->
+				<picture class="picture-bg"> 
+					<source type="image/webp" srcset="img/@2x/webp/sCertificates-head-1.webp"/><img class="object-fit-js" src="img/@2x/sCertificates-head-1.jpg" alt="" loading="lazy"/>
+				</picture>
+				<!-- /picture-->
 				<div class="sInstalments__container container">
 					<div class="sInstalments__row row">
 						<div class="col-md-6 col-lg-5">
@@ -725,7 +730,9 @@
 							</div>
 						</div>
 						<div class="col-md-6 col-lg-7">
-							<div class="sInstalments__img-wrap"><img src="img/@2x/phone.png"/>
+							<div class="sInstalments__img-bg"><img src="img/@2x/sInstalments-img-3.png" alt=""/>
+							</div>
+							<div class="sInstalments__img-wrap"><img src="img/@2x/phone.png" alt=""/>
 							</div>
 						</div>
 					</div>
@@ -733,7 +740,7 @@
 			</section>
 			<!-- end sInstalments-->
 			<!-- start sDontCreatProblems-->
-			<section class="sDontCreatProblems section bg-wrap" id="sDontCreatProblems"><img class="picture-bg" src="img/@2x/lightBg.jpg" alt="" loading="lazy"/>
+			<div class="sDontCreatProblems section bg-wrap" id="sDontCreatProblems"><img class="picture-bg" src="img/@2x/lightBg.jpg" alt="" loading="lazy"/>
 				<div class="sDontCreatProblems__container container">
 					<div class="sDontCreatProblems__row row">
 						<div class="col-md-6">
@@ -751,7 +758,7 @@
 						</div>
 					</div>
 				</div>
-			</section>
+			</div>
 			<!-- end sDontCreatProblems-->
 			<!-- start sWeExplain-->
 			<section class="sWeExplain section bg-wrap" id="sWeExplain">
@@ -764,21 +771,21 @@
 					<div class="sWeExplain__row row">
 						<div class="sWeExplain__col col-md-6 col-lg-4">
 							<div class="sWeExplain__img">
-								<div class="sWeExplain__img-wrap"><img src="img/@2x/sWeExplain-img-1.png"/>
+								<div class="sWeExplain__img-wrap"><img src="img/@2x/sWeExplain-img-1.png" alt=""/>
 								</div>
 							</div>
 							<p>Когда товар уже в корзине, просто выберите способ оплаты «Плати частями»</p>
 						</div>
 						<div class="sWeExplain__col col-md-6 col-lg-4">
 							<div class="sWeExplain__img">
-								<div class="sWeExplain__img-wrap"><img src="img/@2x/sWeExplain-img-2.png"/>
+								<div class="sWeExplain__img-wrap"><img src="img/@2x/sWeExplain-img-2.png" alt=""/>
 								</div>
 							</div>
 							<p>Напишите номер телефона и карты, оплатите 25% от покупки и радуйтесь новым вещам</p>
 						</div>
 						<div class="sWeExplain__col col-md-6 col-lg-4">
 							<div class="sWeExplain__img">
-								<div class="sWeExplain__img-wrap"><img src="img/@2x/sWeExplain-img-3.png"/>
+								<div class="sWeExplain__img-wrap"><img src="img/@2x/sWeExplain-img-3.png" alt=""/>
 								</div>
 							</div>
 							<p>Следующие 3 платежа будут списываться автоматически раз в две недели</p>
