--- a/public/034-instalments-in-tinkoff.html
+++ b/public/034-instalments-in-tinkoff.html
@@ -710,7 +710,12 @@
 			</header>
 			<!-- end header-->
 			<!-- start sInstalments-->
-			<section class="sInstalments sInstalments--tinkoff section" id="sInstalments"><img class="picture-bg" src="img/@2x/sCertificates-head-1.jpg" alt="" loading="lazy"/>
+			<section class="sInstalments sInstalments--tinkoff section" id="sInstalments">
+				<!-- picture-->
+				<picture class="picture-bg"> 
+					<source type="image/webp" srcset="img/@2x/webp/sCertificates-head-1.webp"/><img class="object-fit-js" src="img/@2x/sCertificates-head-1.jpg" alt="" loading="lazy"/>
+				</picture>
+				<!-- /picture-->
 				<div class="sInstalments__container container">
 					<div class="sInstalments__row row">
 						<div class="col-md-6 col-lg-4">
@@ -722,7 +727,7 @@
 							</div>
 						</div>
 						<div class="col-md-6 col-lg-8">
-							<div class="sInstalments__img-wrap-center"><img src="img/@2x/sInstalments-img-2.png"/>
+							<div class="sInstalments__img-wrap-center"><img src="img/@2x/sInstalments-img-2.png" alt=""/>
 							</div>
 						</div>
 					</div>
@@ -766,7 +771,12 @@
 			</section>
 			<!-- end sNewPaymentMethod-->
 			<!-- start sHowToPay-->
-			<section class="sHowToPay section bg-wrap" id="sHowToPay"><img class="picture-bg" src="img/@2x/sCertificates-head-1.jpg" alt="" loading="lazy"/>
+			<section class="sHowToPay section bg-wrap" id="sHowToPay">
+				<!-- picture-->
+				<picture class="picture-bg"> 
+					<source type="image/webp" srcset="img/@2x/webp/sCertificates-head-1.webp"/><img class="object-fit-js" src="img/@2x/sCertificates-head-1.jpg" alt="" loading="lazy"/>
+				</picture>
+				<!-- /picture-->
 				<div class="container">
 					<h2>Как оплатить «Долями»?</h2>
 					<div class="sHowToPay__row row">
