--- a/public/036-installment-plan-by-tinkoff.html
+++ b/public/036-installment-plan-by-tinkoff.html
@@ -710,18 +710,23 @@
 			</header>
 			<!-- end header-->
 			<!-- start sInstalments-->
-			<section class="sInstalments sInstalments--tinkoff section" id="sInstalments"><img class="picture-bg" src="img/@2x/sCertificates-head-1.jpg" alt="" loading="lazy"/>
+			<section class="sInstalments sInstalments--tinkoff section" id="sInstalments">
+				<!-- picture-->
+				<picture class="picture-bg"> 
+					<source type="image/webp" srcset="img/@2x/webp/sCertificates-head-1.webp"/><img class="object-fit-js" src="img/@2x/sCertificates-head-1.jpg" alt="" loading="lazy"/>
+				</picture>
+				<!-- /picture-->
 				<div class="sInstalments__container container">
 					<div class="sInstalments__row row">
-						<div class="col-md-6 col-lg-5 col-xl-4">
+						<div class="col-md-6 col-lg-5 col-xl-6">
 							<div class="sInstalments__content">
 								<h1>Информация о рассрочке и кредите</h1>
 								<div class="sInstalments__bank-name">tinkoff
 								</div><a class="sInstalments__btn btn btn-primary" href="#">перейти к покупкам</a>
 							</div>
 						</div>
-						<div class="col-md-6 col-lg-7 col-xl-8">
-							<div class="sInstalments__img-wrap-center"><img class="tinkoff-logo" src="img/@2x/bg-tinkoff-logo.png"/>
+						<div class="col-md-6 col-lg-7 col-xl-6">
+							<div class="sInstalments__img-wrap-center"><img class="tinkoff-logo" src="img/@2x/bg-tinkoff-logo.png" alt=""/>
 							</div>
 						</div>
 					</div>
@@ -773,7 +778,7 @@
 					<div class="sNewPaymentMethod__row row">
 						<div class="sNewPaymentMethod__col col-md-6 col-lg-4">
 							<div class="sNewPaymentMethod__item">
-								<div class="sNewPaymentMethod__icon-wrap"><img src="img/svg/parts.svg" alt="" loading="lazy"/>
+								<div class="sNewPaymentMethod__icon-wrap"><img src="img/svg/card.svg" alt="" loading="lazy"/>
 								</div>
 								<h4>Возраст от 18 лет</h4>
 							</div>
@@ -796,6 +801,74 @@
 				</div>
 			</section>
 			<!-- end sNewPaymentMethod-->
+			<!-- start sPaymetMethods-->
+			<section class="sPaymetMethods section bg-wrap" id="sPaymetMethods"><img class="picture-bg" src="img/@2x/sCertificates-head-1.jpg" alt="" loading="lazy"/>
+				<div class="sPaymetMethods__picture-bg"><img src="img/@2x/sPaymetMethods-bg.jpg" alt="" loading="lazy"/>
+				</div>
+				<div class="container">
+					<div class="sPaymetMethods__row row">
+						<div class="col-lg-6">
+							<div class="sPaymetMethods__item">
+								<h2>Рассрочка</h2><img src="img/svg/clock-solid.svg" alt="" loading="lazy"/>
+								<div class="sPaymetMethods__wrap">
+									<table>
+										<tr> 
+											<th>Рассрочка</th>
+											<th>Сумма</th>
+											<th>Первый взнос, от</th>
+											<th>Срок</th>
+										</tr>
+										<tr>
+											<td>0-0-6</td>
+											<td>3 000 руб. - 500 000 руб.</td>
+											<td>0%</td>
+											<td>6 мес.</td>
+										</tr>
+										<tr>
+											<td>0-0-12</td>
+											<td>3 000 руб. - 500 000 руб.</td>
+											<td>0%</td>
+											<td>12 мес.</td>
+										</tr>
+									</table>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-6">
+							<div class="sPaymetMethods__item">
+								<h2>Кредит</h2><img src="img/svg/credit.svg" alt="" loading="lazy"/>
+								<div class="sPaymetMethods__wrap sPaymetMethods__wrap--2">
+									<table>
+										<tr> 
+											<th>Сумма</th>
+											<th>Процентная ставка, от</th>
+											<th>Первый взнос, от</th>
+											<th>Срок</th>
+										</tr>
+										<tr>
+											<td>3 000 руб. - 500 000 руб.</td>
+											<td>от 30<br>до 32.5%</td>
+											<td>от 0%<br>до 99%</td>
+											<td>3 мес.<br>12 мес.</td>
+										</tr>
+									</table>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-12">
+							<div class="sPaymetMethods__content"><img src="img/@2x/bg-tinkoff-logo.png" alt=""/>
+								<div class="sPaymetMethods__content-row row">
+									<div class="col-lg-6">
+										<p>Банк самостоятельно принимает решение о&nbsp;предоставлении, либо отказе в&nbsp;предоставлении кредита. Валюта кредита&nbsp;&mdash; рубли. Все программы рассрочки (&laquo;Переплата&nbsp;0%&raquo;) ограничены по&nbsp;сроку. &laquo;Переплата&nbsp;0%&raquo; означает, что полная сумма, подлежащая выплате банку, не&nbsp;превышает стоимости товара, указанной на&nbsp;ценнике. Изменение этой суммы может составлять до&nbsp;0,5% в&nbsp;любую сторону, если дата ежемесячного платежа выпадет на&nbsp;выходные или праздничные дни.</p>
+										<p>АО&nbsp;&laquo;Тинькофф Банк&raquo;, лицензия ЦБ&nbsp;РФ &#8470;&nbsp;2673&nbsp;на осуществление банковских операций от&nbsp;24.03.2015. Первоначальный взнос от&nbsp;0-99% от&nbsp;цены Товара, срок кредитования&nbsp;&mdash; от&nbsp;3-12&nbsp;мес. Процентная ставка&nbsp;&mdash; от&nbsp;30-32.5% годовых, сумма кредита от&nbsp;3&nbsp;000&nbsp;&mdash; 500 000р.</p>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<!-- end sPaymetMethods-->
 			<footer class="footer footer-dd-items-js">
 				<div class="footer__bg"><img loading="lazy" src="img/@2x/sAbout-bg.png" alt=""/>
 				</div>
