--- a/public/016-cart.html
+++ b/public/016-cart.html
@@ -926,7 +926,11 @@
 								</div>
 							</div>
 							<div class="sCart__col sCart__col--right col-lg">
-								<div class="sCart__promo"><input class="sCart__p-input form-control" placeholder="Промокод" type="text"/>
+								<div class="sCart__promo">
+									<div class="form-wrap">
+										<label class="form-wrap__input-wrap"><input class="form-wrap__input form-control" type="text" value="Моя дача"/><span class="form-wrap__input-title">Промокод</span>
+										</label>
+									</div>
 									<button class="sCart__p-btn" type="button">
 										<svg class="icon icon-arrow-r ">
 											<use xlink:href="img/svg/sprite.svg#arrow-r"></use>
@@ -1498,7 +1502,9 @@
 							<p>Оставьте номер телефона, и мы позвоним вам в ближайшее время</p>
 						</div>
 						<div class="form-wrap__inputs">
-							<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="tel" type="tel" placeholder=""/><span class="form-wrap__input-title"></span>
+							<div class="form-wrap__input-wrap form-group">
+								<label><input class="form-wrap__input form-control" name="tel" type="tel" placeholder="Телефон"/><span class="form-wrap__input-title">Телефон</span>
+								</label>
 							</div>
 							<!-- +e.input-wrap-->
 							<button class="form-wrap__btn form-wrap__btn--dark" type="submit">Перезвоните мне
@@ -1520,7 +1526,9 @@
 							<h2>Вход/Регистрация</h2>
 						</div>
 						<div class="form-wrap__inputs">
-							<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="tel" type="tel" placeholder=""/><span class="form-wrap__input-title"></span>
+							<div class="form-wrap__input-wrap form-group">
+								<label><input class="form-wrap__input form-control" name="tel" type="tel" placeholder="Телефон"/><span class="form-wrap__input-title">Телефон</span>
+								</label>
 							</div>
 							<!-- +e.input-wrap-->
 							<button class="form-wrap__btn form-wrap__btn--primary" type="submit">Получить код в SMS
@@ -1844,7 +1852,7 @@
 		<div class="modal-address" id="modal-address" style="display: none">
 			<div class="form-wrap">
 				<form>
-					<label class="form-wrap__name-label"><span class="form-wrap__input-title">Название</span><input class="form-wrap__name-inp form-control" type="text" value="Моя дача"/>
+					<label class="form-wrap__name-label form-wrap__input-wrap"><input class="form-wrap__name-inp form-control form-wrap__input" type="text" value="Моя дача"/><span class="form-wrap__input-title">Название</span>
 					</label>
 					<div class="form-wrap__inp-row row">
 						<div class="col-sm-12">
@@ -1918,28 +1926,28 @@
 						</div>
 						<div class="form-wrap__col col-12">
 							<div class="form-wrap__input-wrap form-group">
-								<label><textarea class="form-wrap__input form-control" name="textarea" placeholder="ваше общее впечатление"></textarea><span class="form-wrap__input-title">Общее впечатление</span>
+								<label><textarea class="form-wrap__input form-control" name="textarea" placeholder="Ваше Общее впечатление"></textarea><span class="form-wrap__input-title">Общее впечатление</span>
 								</label>
 							</div>
 							<!-- +e.input-wrap-->
 						</div>
 						<div class="col-12">
 							<div class="form-wrap__input-wrap form-group">
-								<label><input class="form-wrap__input form-control" name="text" type="text" placeholder="ваше имя"/><span class="form-wrap__input-title">ваше имя</span>
+								<label><input class="form-wrap__input form-control" name="text" type="text" placeholder="Ваше Имя"/><span class="form-wrap__input-title">Ваше Имя</span>
 								</label>
 							</div>
 							<!-- +e.input-wrap-->
 						</div>
 						<div class="col-12">
 							<div class="form-wrap__input-wrap form-group">
-								<label><input class="form-wrap__input form-control" name="tel" type="tel" placeholder="ваш Телефон"/><span class="form-wrap__input-title">ваш Телефон</span>
+								<label><input class="form-wrap__input form-control" name="tel" type="tel" placeholder="Ваш Телефон"/><span class="form-wrap__input-title">Ваш Телефон</span>
 								</label>
 							</div>
 							<!-- +e.input-wrap-->
 						</div>
 						<div class="col-12">
 							<div class="form-wrap__input-wrap form-group">
-								<label><input class="form-wrap__input form-control" name="email" type="email" placeholder="Ваша электронная почта"/><span class="form-wrap__input-title">Ваша электронная почта</span>
+								<label><input class="form-wrap__input form-control" name="email" type="email" placeholder="Ваша Электронная почта"/><span class="form-wrap__input-title">Ваша Электронная почта</span>
 								</label>
 							</div>
 							<!-- +e.input-wrap-->
