--- a/public/029-how-to-order.html
+++ b/public/029-how-to-order.html
@@ -870,10 +870,10 @@
 								<h2>Через мессенджеры</h2>
 								<div class="modern-way__content">
 									<div class="modern-way__social">
-										<h5>WhatsApp</h5><a href="tel+79001121212">+7 900 112 12 12</a>
+										<h5>WhatsApp</h5><a href="tel:+79001121212">+7 900 112 12 12</a>
 									</div>
 									<div class="modern-way__social">
-										<h5>Telegram</h5><a href="tel+79001121212">+7 900 112 12 12</a>
+										<h5>Telegram</h5><a href="tel:+79001121212">+7 900 112 12 12</a>
 									</div>
 								</div>
 							</div>
